# TachiSnap

./: .gitignore  Cargo.toml  README.md  build.sh  index.html
.github/workflows/: deploy.yml  release.yml
src/: lib.rs
web/: index.html
