[package]
name = "pixel-snapper"
version = "0.3.0"
edition = "2021"
description = "Snap AI-generated pixel art to a perfect grid"
license = "MIT"
repository = "https://github.com/YOUR_USERNAME/pixel-snapper"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "pixel-snapper"
path = "src/lib.rs"

[dependencies]
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "gif", "bmp"] }
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"
rand_chacha = "0.3"
gif = "0.13"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
